# jalleda

./: .gitignore  Cargo.toml  TODO.md  default.nix  flake.nix  log.txt
log_tc/: Cargo.toml
src/: app.rs  file.rs  main.rs  ui.rs
