[package]
name = "log_t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"

[[bin]]
name = "log-t"
path = "src/main.rs"